Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2007-03-25 Gal
 BUG: [ 1687754 ] Editor regression in trunk (2)
  Src: stringdiffs.cpp stringdiffsi.h

2007-03-26 Gal
 BUG: [ 1639453 ] Imaginary difference highlighted in character level mode
  Src: stringdiffs.cpp

2007-03-25 Tim
 PATCH: [ 1687661 ] Remove ICONS and BITMAPS from lang files
  Src/Languages/*: Merge*.rc
 PATCH: [ 1687983 ] Remove IMAGES and CURSORS from lang files
  Src/Common: Picture.cpp
  Src/editlib: ccrystaltextview.cpp
  Src/Languages/*: Merge*.rc

2007-03-25 Gal
 BUG: [ 1687754 ] Editor regression in trunk
  Src: stringdiffs.cpp stringdiffsi.h

2007-03-25 Takashi
 Japanese translation - update
  Src/Languages/Japanese/MergeJapanese.rc

2007-03-25 Takashi
 PATCH: [ 1687430 ] printing patch
  Src: Merge.rc MergeEditView.cpp MergeEditView.h
  Src/Common: SplitterWndEx.cpp SplitterWndEx.h
  Src/editlib: ccrystaltextview.cpp ccrystaltextview.h
  Src/Languages/*: Merge*.rc

2007-03-25 Kimmo
 BUG: [ 1680920 ] Line filters are not preserved across sessions
  Src/Common: OptionsMgr.cpp

2007-03-25 Tim
 PATCH: [ 1687439 ] Add MergeProject.ico to WinMerge EXE
  Src: Merge.dsp Merge.rc resource.h
  Src/res new file: MergeProject.ico

2007-03-24 Tim
 PATCH: [ 1684865 ] WinMerge Icon Set Revision 4
  (Initially without the 256*256 version)
  Src/res: MergeDoc.ico

2007-03-22 Gal
 BUG: [ 1683061 ] Bug in highlighting
  Src: stringdiffs.cpp

2007-03-21 Gal
 RFE: [ 1646407 ] Use "equal" or "not equal" as file compare icon
  Src: ChildFrm.cpp ChildFrm.h MergeDoc.cpp

2007-03-21 Gal
 BUG: [ 1491334 ] thinly highlighted position is wrong
  Src: stringdiffs.cpp stringdiffsi.h

2007-03-20 WinMerge experimental release 2.7.3.1 (SVN revision 4179)

2007-03-20 Kimmo
 PATCH: [ 1683805 ] Remove unneeded linefilter registry values
  Src: LineFiltersList.cpp
  Src/Common: OptionsMgr.cpp OptionsMgr.h